--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+h2 {
+  font-family: 'Prata', serif;
+  font-size: 20px;
+  text-align: center;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
 .order-details {
   display: none;
 }
@@ -14,4 +24,14 @@
 
 #banner-photo {
   padding-bottom: 50px;
+}
+
+.btn {
+  background-color: #b0cd56;
+  border-color: lightgrey;
+}
+
+.btn:hover {
+    background-color: #788c3a;
+    border-color: lightgrey;
 }
