--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,9 @@ body {
   display: none;
 }
 
-/* .form-group {
-  padding: 20px;
-} */
+.delivery-form {
+  display: none;
+}
 
 .customer-info {
   padding-bottom: 30px;
@@ -44,4 +44,8 @@ body {
 .btn:hover {
     background-color: #788c3a;
     border-color: lightgrey;
+}
+
+.btn:active {
+  background-color: grey;
 }
