--- a/css/styles.css
+++ b/css/styles.css
@@ -37,6 +37,10 @@ body {
   padding-bottom: 50px;
 }
 
+#submit-order-button {
+  margin-top: 30px;
+}
+
 .btn {
   background-color: #b0cd56;
   border-color: lightgrey;
