add icons and pictures

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,10 +52,12 @@ body {
 
 #delivery-message {
   display: none;
+  text-align: center;
 }
 
 #carryout-message {
   display: none;
+  text-align: center;
 }
 
 .btn {
