--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ body {
   padding-bottom: 30px;
 }
 
+.question {
+  font-family: 'Crete Round', serif;
+}
+
 .center {
     margin: auto;
     width: 50%;
